@@ -1,8 +1,12 @@
-﻿﻿i-MSCP ChangeLog
+﻿i-MSCP ChangeLog
 
 ------------------------------------------------------------------------------------------------------------------------
 Git 1.1.x
 ------------------------------------------------------------------------------------------------------------------------
+
+ADDONS
+	Fixed: Length of SQL's usernames and passwords is not validated ( they must be at least 6 characters long )
+	Fixed: Single quotes in sql usernames must be escaped in configuration files ( PhpMyAdmin, Roundcube )
 
 CONFIGS
 	Added php5-json package ( Debian Jessie )
@@ -20,6 +24,7 @@ FRONTEND
 	Added: Support for eAccelerator, WinCache, XCache and ZendOptimizerPlus opcode caches
 
 INSTALLER
+	Fixed: Length of SQL's usernames and passwords is not validated ( they must be at least 6 characters long )
 	Fixed: Migration from Courier to Dovecot is broken ( courier-dovecot-migrate.pl is run with a wrong option )
 	Fixed: php5enmod command throws an error when a PHP module is missing ( PHP5.4 )
 	Fixed: rsync: failed to set times on "/var/www/virtual": Operation not permitted (1)
